<resources>
    <string name="real_app_name">Albatross Reminder</string>
    <string name="move_today">Move to Today</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="edit_detail">Edit Detail</string>
    <string name="classtime">Lesson</string>
    <string name="sup_classtime">Make-up Lesson</string>
    <string name="assignment">Assignment</string>
    <string name="zoom">Live Lecture (Zoom)</string>
    <string name="team_project">Team Project</string>
    <string name="exam">Exam</string>
    <string name="allow_auto_edit_lms">Allows automatic edit by LMS notification</string>
    <string name="class_name">Subject Name</string>
    <string name="week">Week</string>
    <string name="lesson">Hour</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="zoom_name">Zoom Title</string>
    <string name="exam_name">Exam Title</string>
    <string name="dateFormat">EEEE, MMM d yyyy</string>
    <string name="dateFormatNoYear">EEEE, MMM d</string>
    <string name="calendarFormat">MMMM yyyy</string>
    <string name="timeFormat">a h:mm</string>
    <string name="mark_as_finish">Mark as complete</string>
    <string name="delete">Delete</string>
    <string name="mark_as_not_finish">Mark as not complete</string>
    <string name="delete_msg">Are you sure to delete this?</string>
    <string name="changelog">Update log</string>
    <string name="ask">Ask</string>
    <string name="info_and_ask"><![CDATA[Info & Ask]]></string>
    <string name="email_text">Albatross Reminder User Comment</string>
    <string name="pref_changelog_exp">Check new features from this version.</string>
    <string name="pref_ask_exp">Please send us bugs, questions, or your backup data in case of data aggregation errors!</string>
    <string name="ask_to_dev">Ask to Developer</string>
    <string name="open_source_license">Open Source License</string>
    <string name="pref_opens_exp">Licenses of Open Sources Used in App</string>
    <string name="notify_1hour">Notify before 1 hour</string>
    <string name="notify_2hour">Notify before 2 hours</string>
    <string name="notify_6hour">Notify before 6 hours</string>
    <string name="notify_12hour">Notify before 12 hours</string>
    <string name="notify_24hour">Notify before 24 hours</string>
    <string name="notify_hw_on">You will receive a notification %1$s hour(s) before the submission deadline.</string>
    <string name="notify_hw_off">You will not receive a notification $1$s hour(s) before the submission deadline.</string>
    <string name="notify_lec_on">You will receive a notification %1$s hour(s) before the course deadline.</string>
    <string name="notify_lec_off">You will not receive a notification %1$s hour(s) before the course deadline.</string>
    <string name="notify_zoom_on">You will receive a notification %1$s minutes before the zoom class starts.</string>
    <string name="notify_zoom_off">You will not receive a notification %1$s minutes before the zoom class starts.</string>
    <string name="notify_exam_on">You will receive a notification %1$s minutes before the exam starts.</string>
    <string name="notify_exam_off">You will not receive a notification %1$s minutes before the exam starts.</string>
    <string name="notify_1hour_lec_on">You will receive a notification 1 hour before the course deadline.</string>
    <string name="notify_1hour_lec_off">You will not receive a notification 1 hour before the course deadline.</string>
    <string name="notify_2hour_lec_on">You will receive a notification 2 hours before the course deadline.</string>
    <string name="notify_2hour_lec_off">You will not receive a notification 2 hours before the course deadline.</string>
    <string name="notify_6hour_lec_on">You will receive a notification 6 hours before the course deadline.</string>
    <string name="notify_6hour_lec_off">You will not receive a notification 6 hours before the course deadline.</string>
    <string name="notify_12hour_lec_on">You will receive a notification 12 hours before the course deadline.</string>
    <string name="notify_12hour_lec_off">You will not receive a notification 12 hours before the course deadline.</string>
    <string name="notify_24hour_lec_on">You will receive a notification 24 hours before the course deadline.</string>
    <string name="notify_24hour_lec_off">You will not receive a notification 24 hours before the course deadline.</string>
    <string name="notify_all_off">You will not receive a notification.</string>
    <string name="notifications">Notifications</string>
    <string name="notify_hw">Assignment &amp; Team Project Notify</string>
    <string name="notify_lec">Lecture Notify</string>
    <string name="notify_zoom">Zoom Notify</string>
    <string name="notify_exam">Exam Notify</string>
    <string name="channel_name">LMS Reminder</string>
    <string name="channel_daily_reminder">Daily Reminder</string>
    <string name="channel_time_reminder">Time Reminder</string>
    <string name="reminder_content_lec">%1$d week(s) %2$d hour: %3$d hours left until the class deadline. Take the class on time.</string>
    <string name="reminder_content_sup_lec">%1$d week(s) %2$d hour: %3$d hours left until the make-up class deadline. Take the class on time.</string>
    <string name="reminder_content_hw">\"%1$s\" %2$d hour(s) left until the assignment deadline. Don\' be late.</string>
    <string name="reminder_content_zoom">\"%1$s\" %2$d minutes left until the Zoom lecture starts. Don\' be late.</string>
    <string name="reminder_content_team">\"%1$s\" %2$d hour(s) left until the team project deadline. Don\' be late.</string>
    <string name="reminder_content_exam">\"%1$s\" %2$d minutes left until the exam starts. Don\' be late.</string>
    <string name="reminder_content_lec_register">%1$d week(s) %2$d hour: Class has been enrolled. Take the class until %3$s.</string>
    <string name="reminder_content_sup_lec_register">%1$d week(s) %2$d hour: Make-up class has been enrolled. Take the class until %3$s.</string>
    <string name="reminder_content_hw_register">\"%1$s\" The assignment has been enrolled. Submit up until %2$s.</string>
    <string name="reminder_content_zoom_register">\"%1$s\" Zoom lecture has been enrolled. Attend until %2$s.</string>
    <string name="reminder_content_team_register">\"%1$s\" Team project has been enrolled. Submit up until %2$s.</string>
    <string name="reminder_content_exam_register">\"%1$s\" Exam has been enrolled. Start taking the exam until %2$s.</string>
    <string name="reminder_content_lec_update">%1$d week(s) %2$d hour: Class has been updated. Take the class until %3$s.</string>
    <string name="reminder_content_sup_lec_update">%1$d week(s) %2$d hour: Make-up class has been updated. Take the class until %3$s.</string>
    <string name="reminder_content_hw_update">\"%1$s\" The assignment has been updated. Submit up until %2$s.</string>
    <string name="reminder_content_zoom_update">\"%1$s\" Zoom lecture has been updated. Attend until %2$s.</string>
    <string name="reminder_content_team_update">\"%1$s\" Team project has been updated. Submit up until %2$s.</string>
    <string name="reminder_content_exam_update">\"%1$s\" Exam has been updated. Start taking the exam until %2$s.</string>
    <string name="week_lesson_format">%1$d week(s) %2$d hour</string>
    <string name="finished">Complete</string>
    <string name="deadline">Deadline : %1$s</string>
    <string name="start">Start : %1$s</string>
    <string name="no_deadline_today">There are no assignments or lectures until chosen day.</string>
    <string name="dev_ienlab">Designed, Developed By ienlab\n(Sogang Univ. Art&amp;Technology 20 Ericano Rhee)</string>
    <string name="other_settings">Other Settings</string>
    <string name="notify_when_lms">Notify when LMS info is received</string>
    <string name="notify_when_lms_sum_on">Notify when information is received from LMS.</string>
    <string name="notify_when_lms_sum_off">Not notify when information is received from LMS.</string>
    <string name="backup">Data Backup</string>
    <string name="backup_desc">Backup application data in json format.</string>
    <string name="backup_msg">Backup completed.</string>
    <string name="restore">Data Restore</string>
    <string name="restore_desc">Restore data from json format file.</string>
    <string name="restore_msg">Existing data will be lost and replaced with backup data. Proceed?</string>
    <string name="restore_finish">Data restoration complete. Please relaunch the application.</string>
    <string name="restart_to_apply">Applied after rerunning the application.</string>
    <string name="help">Help</string>
    <string name="review_title">Is this app useful?</string>
    <string name="review_content">If you are satisfied, please leave a review and rating!</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="delete_all">Delete all</string>
    <string name="dnd_time">Set Do Not Disturb time</string>
    <string name="dnd_time_check">Enable Do Not Disturb time</string>
    <string name="dnd_time_check_on">Won\'t be notified at the set time. Instead, it is kept in a notification window of the app.</string>
    <string name="dnd_time_check_off">Won\'t use Do Not Disturb mode.</string>
    <string name="start_at">Start at..</string>
    <string name="end_at">End at..</string>
    <string name="widget_dark_mode_title">Apply system dark mode on widget</string>
    <string name="widget_dark_mode_desc_on">Dark mode is applied to the widget.</string>
    <string name="widget_dark_mode_desc_off">Widgets always have day mode (bright).</string>
    <string name="load_data">Loading data..</string>
    <string name="intro_page2_title">Allow notification access, to get notifications</string>
    <string name="intro_page2_exp">We need notification access in order to read notifications.</string>
    <string name="one_hour">1 hr</string>
    <string name="two_hour">2 hrs</string>
    <string name="six_hour">6 hrs</string>
    <string name="twelve_hour">12 hrs</string>
    <string name="twfour_hour">24 hrs</string>
    <string name="save_ask">Save?</string>
    <string name="morning_reminder">Morning Reminder</string>
    <string name="night_reminder">Night Reminder</string>
    <string name="morning_reminder_time">Morning Reminder Time</string>
    <string name="night_reminder_time">Night Reminder Time</string>
    <string name="morning_reminder_desc_on">At morning, we will inform you of assignments or lectures with an impending deadline.</string>
    <string name="morning_reminder_desc_off">At morning, we won\'t inform you of assignments or lectures with an impending deadline.</string>
    <string name="night_reminder_desc_on">At night, we will inform you of assignments or lectures with an impending deadline.</string>
    <string name="night_reminder_desc_off">At night, we won\'t inform you of assignments or lectures with an impending deadline.</string>
    <string name="calendar_icon_view">Display detailed icons on the main screen calendar</string>
    <string name="calendar_icon_view_desc_on">Detailed icons are displayed for each item, and completed/not completed are classified by color.</string>
    <string name="calendar_icon_view_desc_off">Regardless of the type, complete/incomplete are classified by a circle shape.</string>
    <string name="date_delete_title">Delete schedules that match conditions</string>
    <string name="date_delete_summary">Touch to improve the speed of your application by deleting old events that match the conditions</string>
    <string name="not_save">Not save</string>
    <string name="use_dynamic_colors">Use dynamic colors</string>
    <string name="use_dynamic_colors_sum_off">Apply the default color throughout the app.</string>
    <string name="use_dynamic_colors_sum_on">Apply dynamic colors throughout the app.</string>
</resources>