<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal"
    android:weightSum="5"
    android:paddingHorizontal="@dimen/usual_margin"
    android:paddingTop="@dimen/usual_margin"
    app:selectionRequired="true"
    app:singleSelection="false">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1hour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/one_hour"
        android:checkable="true"
        android:autoSizeTextType="uniform"
        android:padding="@dimen/usual_margin_half"
        android:fontFamily="@font/pretendard"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2hour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/two_hour"
        android:checkable="true"
        android:autoSizeTextType="uniform"
        android:padding="@dimen/usual_margin_half"
        android:fontFamily="@font/pretendard"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_6hour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/six_hour"
        android:checkable="true"
        android:autoSizeTextType="uniform"
        android:padding="@dimen/usual_margin_half"
        android:fontFamily="@font/pretendard"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_12hour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/twelve_hour"
        android:checkable="true"
        android:autoSizeTextType="uniform"
        android:padding="@dimen/usual_margin_half"
        android:fontFamily="@font/pretendard"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_24hour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/twfour_hour"
        android:checkable="true"
        android:autoSizeTextType="uniform"
        android:padding="@dimen/usual_margin_half"
        android:fontFamily="@font/pretendard"/>

</com.google.android.material.button.MaterialButtonToggleGroup>