<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/img_onboarding_2"
                android:contentDescription="@string/intro_page2_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btn_1hour"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_1hour"
                android:tint="@color/black"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:alpha="0.3"
                android:contentDescription="@string/one_hour"
                android:layout_marginStart="@dimen/margin_onboarding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <ImageButton
                android:id="@+id/btn_2hour"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_2hour"
                android:tint="@color/black"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:alpha="0.3"
                android:contentDescription="@string/two_hour"
                app:layout_constraintStart_toEndOf="@id/btn_1hour"
                app:layout_constraintEnd_toStartOf="@id/btn_6hour"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btn_6hour"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_6hour"
                android:tint="@color/black"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:alpha="0.3"
                android:contentDescription="@string/six_hour"
                app:layout_constraintStart_toEndOf="@id/btn_2hour"
                app:layout_constraintEnd_toStartOf="@id/btn_12hour"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btn_12hour"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_12hour"
                android:tint="@color/black"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:alpha="0.3"
                android:contentDescription="@string/twelve_hour"
                app:layout_constraintStart_toEndOf="@id/btn_6hour"
                app:layout_constraintEnd_toStartOf="@id/btn_24hour"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btn_24hour"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_24hour"
                android:tint="@color/black"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:alpha="0.3"
                android:contentDescription="@string/twfour_hour"
                android:layout_marginEnd="@dimen/margin_onboarding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/section_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_onboarding"
                android:text="@string/intro_page2_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/section_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_onboarding"
                android:layout_marginTop="20dp"
                android:text="@string/intro_page2_exp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/section_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>