<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_ask"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_black"
        android:layout_marginStart="@dimen/usual_margin"
        android:layout_marginEnd="@dimen/usual_margin"
        android:layout_marginTop="@dimen/usual_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_neutral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/usual_margin"
        android:padding="@dimen/usual_margin"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_negative"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/btn_neutral_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/usual_margin"
            android:layout_gravity="center"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_negative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/usual_margin"
        android:padding="@dimen/usual_margin"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@id/btn_neutral"
        app:layout_constraintEnd_toStartOf="@id/btn_positive"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:contentDescription="@android:string/no"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/btn_negative_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/usual_margin"
            android:layout_gravity="center"
            android:text="@string/not_save"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_positive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/usual_margin"
        android:padding="@dimen/usual_margin"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@id/btn_negative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:contentDescription="@android:string/yes"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/btn_positive_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/usual_margin"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>